--- a/sources/_VS/DeviceOSC/FPGA.vcxproj
+++ b/sources/_VS/DeviceOSC/FPGA.vcxproj
@@ -81,6 +81,24 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\common\_VS\cmsis_armcc.h" />
+    <ClInclude Include="..\..\common\_VS\cmsis_armcc_V6.h" />
+    <ClInclude Include="..\..\common\_VS\core_cm4.h" />
+    <ClInclude Include="..\..\common\_VS\core_cmFunc.h" />
+    <ClInclude Include="..\..\common\_VS\core_cmInstr.h" />
+    <ClInclude Include="..\..\common\_VS\core_cmSimd.h" />
+    <ClInclude Include="..\..\common\_VS\ctype.h" />
+    <ClInclude Include="..\..\common\_VS\integer.h" />
+    <ClInclude Include="..\..\common\_VS\inttypes.h" />
+    <ClInclude Include="..\..\common\_VS\limits.h" />
+    <ClInclude Include="..\..\common\_VS\math.h" />
+    <ClInclude Include="..\..\common\_VS\stdarg.h" />
+    <ClInclude Include="..\..\common\_VS\stdint.h" />
+    <ClInclude Include="..\..\common\_VS\stdio.h" />
+    <ClInclude Include="..\..\common\_VS\stdlib.h" />
+    <ClInclude Include="..\..\common\_VS\string.h" />
+    <ClInclude Include="..\..\common\_VS\tchar.h" />
+    <ClInclude Include="..\..\common\_VS\windows.h" />
     <ClInclude Include="..\..\Device\src\defines.h" />
     <ClInclude Include="..\..\Device\src\Device.h" />
     <ClInclude Include="..\..\Device\src\Display\Display.h" />
@@ -125,24 +143,6 @@
     <ClInclude Include="..\..\Device\src\Utils\Math.h" />
     <ClInclude Include="..\..\Device\src\Utils\MathOSC.h" />
     <ClInclude Include="..\..\Device\src\Utils\StringUtils.h" />
-    <ClInclude Include="..\..\libs\common\_VS\cmsis_armcc.h" />
-    <ClInclude Include="..\..\libs\common\_VS\cmsis_armcc_V6.h" />
-    <ClInclude Include="..\..\libs\common\_VS\core_cm4.h" />
-    <ClInclude Include="..\..\libs\common\_VS\core_cmFunc.h" />
-    <ClInclude Include="..\..\libs\common\_VS\core_cmInstr.h" />
-    <ClInclude Include="..\..\libs\common\_VS\core_cmSimd.h" />
-    <ClInclude Include="..\..\libs\common\_VS\ctype.h" />
-    <ClInclude Include="..\..\libs\common\_VS\integer.h" />
-    <ClInclude Include="..\..\libs\common\_VS\inttypes.h" />
-    <ClInclude Include="..\..\libs\common\_VS\limits.h" />
-    <ClInclude Include="..\..\libs\common\_VS\math.h" />
-    <ClInclude Include="..\..\libs\common\_VS\stdarg.h" />
-    <ClInclude Include="..\..\libs\common\_VS\stdint.h" />
-    <ClInclude Include="..\..\libs\common\_VS\stdio.h" />
-    <ClInclude Include="..\..\libs\common\_VS\stdlib.h" />
-    <ClInclude Include="..\..\libs\common\_VS\string.h" />
-    <ClInclude Include="..\..\libs\common\_VS\tchar.h" />
-    <ClInclude Include="..\..\libs\common\_VS\windows.h" />
     <ClInclude Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClInclude>
@@ -196,13 +196,13 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\common\_VS\algorithm" />
+    <None Include="..\..\common\_VS\cstdlib" />
+    <None Include="..\..\common\_VS\cstring" />
+    <None Include="..\..\common\_VS\limits" />
     <None Include="..\..\Device\src\libs\CMSIS\startup_stm32f437xx.s">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </None>
-    <None Include="..\..\libs\common\_VS\algorithm" />
-    <None Include="..\..\libs\common\_VS\cstdlib" />
-    <None Include="..\..\libs\common\_VS\cstring" />
-    <None Include="..\..\libs\common\_VS\limits" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -257,7 +257,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>..\..\Device\src;..\..\Device\src\libs\HAL;..\..\libs\common;..\..\libs\common\_VS;..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc;..\..\libs\STM32Cube_F4\Drivers\CMSIS\Device\ST\STM32F4xx\Include;..\..\libs\STM32Cube_F4\Drivers\CMSIS\Include</IncludePath>
+    <IncludePath>..\..\Device\src;..\..\Device\src\libs\HAL;..\..\libs\common;..\..\common\_VS;..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc;..\..\libs\STM32Cube_F4\Drivers\CMSIS\Device\ST\STM32F4xx\Include;..\..\libs\STM32Cube_F4\Drivers\CMSIS\Include</IncludePath>
     <OutDir>.\Debug\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
