OSC-Open Создан проект Keil

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ sources/Panel/Objects/*
 
 sources/OSC-VS/Device/Debug/*
 sources/OSC-VS/Panel/Debug/*
+
+sources/OSC-Open/Objects/*
+sources/OSC-Open/DebugConfig/*
+sources/OSC-Open/Listings/*
