--- a/sources/OSC-Open/OSC-Open.uvprojx
+++ b/sources/OSC-Open/OSC-Open.uvprojx
@@ -192,7 +192,7 @@
             <EndSel>0</EndSel>
             <uLtcg>0</uLtcg>
             <nSecure>0</nSecure>
-            <RoSelD>4</RoSelD>
+            <RoSelD>3</RoSelD>
             <RwSelD>4</RwSelD>
             <CodeSel>0</CodeSel>
             <OptFeed>0</OptFeed>
@@ -471,6 +471,16 @@
               <FileType>1</FileType>
               <FilePath>..\common\libs\STM32Cube_F7\Drivers\STM32F7xx_HAL_Driver\Src\stm32f7xx_hal_cortex.c</FilePath>
             </File>
+            <File>
+              <FileName>stm32f7xx_hal_sdram.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\common\libs\STM32Cube_F7\Drivers\STM32F7xx_HAL_Driver\Src\stm32f7xx_hal_sdram.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32f7xx_ll_fmc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\common\libs\STM32Cube_F7\Drivers\STM32F7xx_HAL_Driver\Src\stm32f7xx_ll_fmc.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -622,16 +632,6 @@
               <FilePath>..\Panel\src\Hardware\Controls.h</FilePath>
             </File>
             <File>
-              <FileName>LTDC.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\Panel\src\Hardware\LTDC.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>LTDC.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\Panel\src\Hardware\LTDC.h</FilePath>
-            </File>
-            <File>
               <FileName>CPU.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Hardware\CPU.cpp</FilePath>
@@ -650,6 +650,16 @@
               <FileName>Keyboard.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Hardware\Keyboard.h</FilePath>
+            </File>
+            <File>
+              <FileName>LTDC.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Hardware\LTDC.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>LTDC.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Hardware\LTDC.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -716,11 +726,6 @@
         <Group>
           <GroupName>Settings</GroupName>
           <Files>
-            <File>
-              <FileName>Settings.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\Panel\src\Settings\Settings.cpp</FilePath>
-            </File>
             <File>
               <FileName>SettingsTypes.h</FileName>
               <FileType>5</FileType>
