--- a/sources/OSC-VS/Panel/PanelOSC.vcxproj
+++ b/sources/OSC-VS/Panel/PanelOSC.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="..\..\common\_VS\windows.h" />
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\CMSIS\Device\ST\STM32F4xx\Include\stm32f429xx.h" />
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h" />
+    <ClInclude Include="..\..\OSC-Open\src\Hardware\LTDC.h" />
     <ClInclude Include="..\..\Panel\src\defines.h" />
     <ClInclude Include="..\..\Panel\src\Display\Colors.h" />
     <ClInclude Include="..\..\Panel\src\Display\Display.h" />
@@ -196,7 +197,6 @@
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_tim_ex.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClInclude>
-    <ClInclude Include="..\..\Panel\src\Hardware\LTDC.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\stm32\stm32.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\stm32\stm429.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\stm32\Timer4XX.h" />
@@ -208,6 +208,7 @@
     <ClInclude Include="..\..\Panel\src\Utils\Math.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\OSC-Open\src\Hardware\LTDC.cpp" />
     <ClCompile Include="..\..\Panel\src\Display\Colors.cpp" />
     <ClCompile Include="..\..\Panel\src\Display\Display.cpp" />
     <ClCompile Include="..\..\Panel\src\Display\font\Font.cpp" />
@@ -219,7 +220,6 @@
     <ClCompile Include="..\..\Panel\src\Hardware\CPU_IT.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\FSMC.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\Keyboard.cpp" />
-    <ClCompile Include="..\..\Panel\src\Hardware\LTDC.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\stm32\stm32.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\stm32\stm429.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\stm32\Timer4XX.cpp" />
@@ -264,7 +264,6 @@
     <ClCompile Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_tim_ex.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\..\Panel\src\Settings\Settings.cpp" />
     <ClCompile Include="..\..\Panel\src\Utils\Decoder.cpp" />
     <ClCompile Include="..\..\Panel\src\Utils\Math.cpp" />
   </ItemGroup>
