--- a/sources/OSC-Open-VS/OSC-Open.vcxproj
+++ b/sources/OSC-Open-VS/OSC-Open.vcxproj
@@ -92,7 +92,7 @@
       <PreprocessorDefinitions>WIN32;USE_HAL_DRIVER;STM32F746xx;MSVC;OPEN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>-MP %(AdditionalOptions)</AdditionalOptions>
       <MinimalRebuild>false</MinimalRebuild>
-      <DisableSpecificWarnings>4068;4514;4820;5045</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4068;4514;4623;4626;4820;5027;5045</DisableSpecificWarnings>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
